--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: dev
   batch:
     job:
       names: ${job.name:NONE}
@@ -11,3 +13,8 @@ spring:
     password: test1234!@#$
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: create
+logging:
+  level:
+    com.ll.exam.app_2022_09_22: debug
